# AI-primer

./: README.md  blogs.md  bug_report.md  paper.md  papers.md  requirements.txt
RL/: RL-DPO.ipynb
clip/: clip-vit-base-patch16.txt  clip-vit-base-patch32.txt  clip-vit-large-patch14-336.txt  clip-vit-large-patch14.txt  clip.ipynb
colab/: Getting_started_with_google_colab_ai.ipynb
cuda/: README.md  build.bat  build.sh  cuda_hello_world.cpp
cuda/pycuda/: ex1.py
data/four-classic-novels/: red.txt  water.txt  west.txt
dnn/: dnn_training.ipynb
hardware/: README.md  check_a100_info.ipynb  colab_L4_info.ipynb  colab_cpu_info.ipynb
hf_transformers/: quicktour.ipynb
inference-performance-test/: simple_batch_infer.py
pytorch/: block_table.ipynb  dim_test.py  dynamo_infer.py  dynamo_train.py  flex_attn_test.py  popcount.py  popcount_int16.py  sdpa.py  simple_flex_test.py  softmax_test.py  tensor_slice.ipynb
pytorch/torch.compile/: CMakeLists.txt  README_torch_compile.md  build_cpp.bat  build_cpp.sh  test_torch_compile.py  torch_compile_cpp_demo.cpp  torch_compile_ex1.py  torch_compile_mechanism.py
qwen-infer/: README.md  TOPK_ATTENTION_IMPLEMENTATION.md  example_usage.py  qwen_infer.py  test_top_k_attention.py  top_k_attention.py
stable-diffusion/: stable-diffusion-test.py
transformer/: attention_benchmark_comparison.py  flash_attention_comparison.py  flex_attention.py  gqa.py  mla.py  self_attention_example.py  self_attn.ipynb  self_attn.py  test_flash_vs_flex.py
wandb/: Organizing_Hyperparameter_Sweeps_in_PyTorch_with_W&B.ipynb
(+15 files in other folders)
